[bumpversion]
current_version = 0.1.1
commit = True
tag = True
sign_tags = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:erdgen/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[mypy]
ignore_missing_imports = True
